--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -1,3 +1,29 @@
+html,
 body {
-    background-color: red;
+    height: 100%;
+}
+
+.main-box {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+/* ----------------------------------------------------Left Box------------------------------------------------------------ */
+.left-box {
+    width: 40%;
+    background-color: aqua;
+}
+
+
+
+
+
+
+
+/* ----------------------------------------------------Right Box------------------------------------------------------------ */
+.right-box {
+    width: 60%;
+    background-color: blue;
 }
