--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -27,13 +27,14 @@ body {
     color: white;
     font-size: 1.50rem !important;
     text-align: center;
-    margin-bottom: 45px;
+    margin-bottom: 40px;
 }
 
 .tansim-left-container .tansim-left-header h5 {
     color: #6AE2FA;
     text-align: center;
     font-size: 1.90rem !important;
+    line-height: 1.4;
 }
 
 .tansim-left-container .tansim-left-footer {
@@ -58,10 +59,15 @@ body {
     position: relative;
 }
 
+.tansim-right-container .close-btn {
+    position: absolute;
+    right: 70px;
+    top: 35px;
+}
+
 .tansim-right-container .tansim-right-form {
     width: 600px;
-    margin: 140px auto;
-    /* position: absolute; */
+    margin: 120px auto;
 }
 
 .tansim-right-container .tansim-right-form h4 {
@@ -71,7 +77,7 @@ body {
 
 .tansim-right-container .tansim-right-form input {
     background-color: #FCFCFC !important;
-    height: 50px !important;
+    height: 48px !important;
 }
 
 ::placeholder {
@@ -81,8 +87,9 @@ body {
 }
 
 .tansim-right-container .tansim-right-form button {
+    margin-top: 35px;
     background-color: #3B87F6 !important;
-    opacity: 0.9;
+    opacity: 0.8;
     padding-top: 15px;
     padding-bottom: 15px;
 }
