--- a/assets/css/general-responsive.css
+++ b/assets/css/general-responsive.css
@@ -38,7 +38,7 @@ body {
 .tansim-left-container .tansim-left-footer {
     position: absolute;
     bottom: 120px;
-    left: 25%;
+    left: 23%;
     color: white;
 }
 
@@ -96,4 +96,19 @@ body {
 .tansim-right-container .tansim-right-form button:hover {
     background-color: #3B87F6 !important;
     opacity: 1;
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (max-width: 1068px) {
+
+    .tansim-right-container .tansim-right-form {
+        padding: 15%;
+    }
+}
+
+/*  Small devices (landscape phones, 576px and up) */
+@media (max-width: 576px) {
+    .col-md-4.tansim-left-container {
+        display: none;
+    }
 }
