--- a/assets/css/general-responsive.css
+++ b/assets/css/general-responsive.css
@@ -132,3 +132,33 @@ body {
         top: 5%;
     }
 }
+
+/* tablets */
+@media (min-width: 576px) and (max-width:768px) {
+    .main-container {
+        height: 100%;
+        width: 100%;
+        overflow: hidden;
+    }
+
+    .tansim-right-container .tansim-right-form {
+        padding: 25% 10%;
+    }
+
+    .tansim-right-container .tansim-right-form input {
+        width: 90%;
+    }
+
+    .tansim-right-container .tansim-right-form button {
+        width: 90%;
+        padding-top: 3%;
+        padding-bottom: 3%;
+    }
+
+    .tansim-right-container .close-btn {
+        position: absolute;
+        right: 10%;
+        top: 5%;
+    }
+
+}
